      True.
    * Stop sending duplicate Host: headers, proxies (at least squid) mangle 
      these into one host header, causing failures when accessing rbuilder
      repositories that depend on that host header (bz #795)
    * The Symlink() build action should not enforce symlinks not
      dangling, and should instead rely solely on the DanglingSymlinks
      policy.

Changes in 1.0.13:
  o Client Changes:
    * A new "conary migrate" command for updating troves has been
      added.  "conary migrate" is useful for circumstances when you
      want to update the software state on a system to be synchronized
      with the default state of a group.  To do this, "conary migrate"
      calculates the changeset required to: 1) update the trove (if an
      update is available); 2) install any missing included troves; 3)
      synchronize included troves that have a mismatched version; 4)
      remove any referenced troves that are not installed by default.
    * The includeConfigFiles configuration directive now accepts http
      and https URLs.  This allows organizations to set up centralized
      site-wide conary configuration.
    * Conary now gives a more detailed error message when a changeset
      attempts to replace an empty directory with a file and
      --replace-files is not specified.

  o Build Changes:
    * The addSource source action will now replace existing files,
      rather than replacing their contents.  This implies that the
      mode of the existing file will not be inherited, and an
      existing read-only file will not prevent addSource from
      working.
    * The internal setModes policy now reports "suid/sgid" only for
      files that are setuid or setgid, rather than all files which
      have an explicitly set mode.  (bz #935)
    * TagSpec no longer will print out ignored TagSpec matches twice,
      once for tags specified in the recipe, and once for tags
      discovered in /etc/conary/tags/*.  (bz #902)